2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/object.inl: Add _Objects_Is_api_valid.

2008-01-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/threadget.c: Use _Objects_Is_api_valid rather than open
	coding it.

2008-01-05	Chris Johns <chrisj@rtems.org>

	* configure.ac: Fix typo in the strict order mutex CPU OPTs test.
	* libmisc/shell/shell.c: Handle '#' comment characters correctly.
	* libblock/include/rtems/flashdisk.h: Add docmentation about the
	control fields. Add more control fields to handle the flash when
	full.
	* libblock/src/flashdisk.c: Fix the descriptor erase test so it
	detects a descriptor is erased. Add support for unavailable blocks
	the user can configure. Print the used list as a diag. Fix the bug
	when a page is detected as failed and present on more than one
	queue. Add a count to the queues so queue length can be used to
	manage compaction.
	
2008-01-03	Till Straumann <strauman@slac.stanford.edu>

	* score/src/threadhandler.c, sapi/src/exshutdown.c:
	cannot call _fini via atexit() from rtems_shutdown_executive()
	because at the point where rtems_shutdown_executive is called
	the C-library is already dead.
	Instead, register an atexit(_fini) after calling _init().

2007-12-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/Makefile.am: _rename_r is required by newlib 1.16.0.
	Hopefully this implementation is OK.
	* libcsupport/src/_rename_r.c: New file.

2007-12-22	Chris Johns <chrisj@rtems.org>

	* configure.ac: fixed bug that always enabled strict order
	mutexes.
	* score/inline/rtems/score/coremutex.inl: Fixed coding standard.
	* score/src/coremutex.c: Add the holder's thread to the lock_mutex
	list if the mutex is initialised locked.
	* libnetworking/rtems/rtems_glue.c: Changed semaphore error
	message to show the error is an rtems-net error.
	* libmisc/monitor/mon-network.c: Removed warnings.
	* telnetd/icmds.c: Changed shell_* to rtems_shell_*.